fix text alignment

--- a/src/scss/_tiles.scss
+++ b/src/scss/_tiles.scss
@@ -18,6 +18,7 @@ body {
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
+    text-align: center;
     border-radius: 1rem;
     cursor: pointer;
 
